Remove fixed height and use all available space.
- Restructure player template.
- Support custom progress bar colour.
- Truncate title text.

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,7 +2,7 @@
 @use "./player";
 
 :root {
-  --player-height: 4rem;
+  --pico-progress-style: pink;
 }
 
 body {
@@ -14,5 +14,6 @@ section {
 
   > .pico-player {
     margin-bottom: 1rem;
+    font-size: 1rem;
   }
 }
